--- a/src/components/Mainpage/Mainpage.css
+++ b/src/components/Mainpage/Mainpage.css
@@ -59,6 +59,12 @@
 
 .top-charts-div {
     overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.top-charts-div::-webkit-scrollbar {
+    display: none;
 }
 
 @media(min-width:800.01px) {
